--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
     </header>
     <header class="site-header site-header--dynamic">
         <div class="container">
-            <div class="site-header__content">
+            <div class="site-header__content site-header__content--dynamic">
                 <div class="site-header__menu-content">
                     <nav class="primary-nav">
                         <ul class="primary-nav__list">
@@ -85,13 +85,13 @@
             <div class="secondary-nav-container">
                 <ul class="secondary-nav__list">
                     <li class="secondary-nav__item">
-                        <a href="#myself-paths" id="myself-paths-link" class="secondary-nav__link">Agency</a>
+                        <a href="#myself-paths" id="myself-paths-link" class="secondary-nav__link">AGENCY</a>
                     </li>
                     <li class="secondary-nav__item">
-                        <a href="#myself-skills" id="myself-skills-link" class="secondary-nav__link">Academy</a>
+                        <a href="#myself-skills" id="myself-skills-link" class="secondary-nav__link">ACADEMY</a>
                     </li>
                     <li class="secondary-nav__item">
-                        <a href="#myself-goals" id="myself-goals-link" class="secondary-nav__link">Freelance</a>
+                        <a href="#myself-goals" id="myself-goals-link" class="secondary-nav__link">FREELANCE</a>
                     </li>
                 </ul>
             </div>
@@ -99,7 +99,51 @@
         <section id="myself-paths" class="myself-section section section__myself " data-matching-link="#myself-paths-link">
             <div class="section__container">
                 <header class="section__header">
-                    <h2 class="section__heading">Revived as a designer.</h2>
+                    <h2 class="section__heading">Learning from Professionals.</h2>
+                    <div class="section__paragraph">
+                        We work in the space where brands and technology meet. Where brands willing to create something
+                        unique 
+                    </div>
+                </header>
+                <div class="section__side section__side--right-padding">
+                    <div class="section__side-container">
+                        <div class="cards">
+                            <a href="#" class="cards__card card">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_03.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">MOBILE APP</p>
+                                    <h3 class="card__title">How to improve people's mindfulness?</h4>
+                                </div>
+                            </a>
+                            <a href="#" class="cards__card card">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">WEBSITE</p>
+                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
+                                </div>
+                            </a>
+                            <a href="#" class="cards__card card card__last">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">WEBSITE</p>
+                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
+                                </div>
+                            </a>                        
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="myself-skills" class="myself-section section section__academy" data-matching-link="#myself-skills-link">
+            <div class="section__container">
+                <header class="section__header">
+                    <h2 class="section__heading">Learning from Professionals.</h2>
                     <div class="section__paragraph">
                         We work in the space where brands and technology meet. Where brands willing to create something
                         unique and
@@ -108,130 +152,105 @@
                         explore endless ways to connect with consumers.
                     </div>
                 </header>
-                <div class="section__side section__side--left-padding">
+                <div class="section__side section__side--right-padding">
                     <div class="section__side-container">
-                        <img class="img1" src="./assets/images/hero_04.jpg" alt="myself image">
-                        <img class="img2" src="./assets/images/hero_01.jpg" alt="myself image">
+                        <div class="cards">
+                            <a href="#" class="cards__card card">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_03.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">MOBILE APP</p>
+                                    <h3 class="card__title">How to improve people's mindfulness?</h4>
+                                </div>
+                            </a>
+                            <a href="#" class="cards__card card">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">WEBSITE</p>
+                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
+                                </div>
+                            </a>
+                            <a href="#" class="cards__card card">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">WEBSITE</p>
+                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
+                                </div>
+                            </a>
+                            <a href="#" class="cards__card card">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">WEBSITE</p>
+                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
+                                </div>
+                            </a>
+                            <a href="#" class="cards__card card card__last">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">WEBSITE</p>
+                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
+                                </div>
+                            </a>                        
+                        </div>
                     </div>
-                </div>
-                <div class="section__cta">
-                    <a href="#" class="btn btn--underline">See my story<span></span></a>
                 </div>
             </div>
         </section>
-        <section id="myself-skills" class="myself-section section section__design" data-matching-link="#myself-skills-link">
+        <section id="myself-goals" class="myself-section section" data-matching-link="#myself-goals-link">
             <div class="section__container">
                 <header class="section__header">
-                    <h2 class="section__heading">Believe in Power of UX Design.</h2>
+                    <h2 class="section__heading">Learning from Professionals.</h2>
                     <div class="section__paragraph">
                         We work in the space where brands and technology meet. Where brands willing to create something
                         unique and
-                        exciting can explore endless ways to connect with consumers.
-                    </div>
-                    <div class="section__illust">
-                        <div class="illust__container is-in-view">
-                            <figure class="illust__circle illust__circle--left">Client's Needs</figure>
-                            <figure class="illust__circle illust__circle--center">Design Thinking</figure>
-                            <figure class="illust__circle illust__circle--right">Users' Needs</figure>
-                        </div>
-                    </div>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
-                        exciting can explore endless ways to connect with consumers.
+                        exciting
+                        can
+                        explore endless ways to connect with consumers.
                     </div>
                 </header>
                 <div class="section__side section__side--right-padding">
                     <div class="section__side-container">
-                        <h3 class="section__eyebrow section__eyebrow--bw1">FEATURED DESIGN WORKS</h3>
                         <div class="cards">
-                            <a href="#" class="cards__card">
+                            <a href="#" class="cards__card card">
                                 <div class="card__img-container">
                                     <img src="./assets/images/hero_03.jpg" alt="design work" class="card__img">
                                 </div>
                                 <div class="card__info">
-                                    <p class="card__meta">Mobile App</p>
-                                    <h4 class="card__title">How to improve people's mindfulness?</h4>
+                                    <p class="card__meta">MOBILE APP</p>
+                                    <h3 class="card__title">How to improve people's mindfulness?</h4>
                                 </div>
                             </a>
-                            <a href="#" class="cards__card">
+                            <a href="#" class="cards__card card">
                                 <div class="card__img-container">
                                     <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
                                 </div>
                                 <div class="card__info">
-                                    <p class="card__meta">Mobile App</p>
-                                    <h4 class="card__title">How to improve people's mindfulness?</h4>
+                                    <p class="card__meta">WEBSITE</p>
+                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
                                 </div>
                             </a>
-                        </div>
-                        <div href="#" class="section__cta">
-                            <a href="#" class="btn btn--underline">See all design works<span></span></a>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-        </section>
-        <section id="myself-goals" class="myself-section section section--development" data-matching-link="#myself-goals-link">
-            <div class="section__container">
-                <header class="section__header">
-                    <h2 class="section__heading">Thanks to learning development, I've got a broader view.</h2>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique
-                        and
-                        exciting can explore endless ways to connect with consumers.
-                    </div>
-                    <div class="section__illust">
-                        <div class="illust__container is-in-view">
-                            <figure class="illust__circle illust__circle--big">
-                                <span class="illust__circle-inner illust__circle-inner--title1">Front-end</span>
-                                <span class="illust__circle-inner illust__circle-inner--item2">CSS</span>
-                                <span class="illust__circle-inner illust__circle-inner--item3">JS</span>
-                                <span class="illust__circle-inner illust__circle-inner--item1">HTML</span>
-                            </figure>
-                            <figure class="illust__circle illust__circle--medium">
-                                <span class="illust__circle-inner illust__circle-inner--title2">Back-end</span>
-                                <span class="illust__circle-inner illust__circle-inner--item4">Express JS</span>
-                                <span class="illust__circle-inner illust__circle-inner--item5">Mongo DB</span>
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique
-                        and
-                        exciting can explore endless ways to connect with consumers.
-                    </div>
-                </header>
-                <div class="section__side section__side--right-padding">
-                    <div class="section__side-container">
-                        <h3 class="section__eyebrow section__eyebrow--bw1">FEATURED DEVELOPMENT WORKS</h3>
-                        <div class="cards">
-                            <a href="#" class="cards__card">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_03.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">Mobile App</p>
-                                    <h4 class="card__title">How to improve people's mindfulness?</h4>
-                                </div>
-                            </a>
-                            <a href="#" class="cards__card">
+                            <a href="#" class="cards__card card card__last">
                                 <div class="card__img-container">
                                     <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
                                 </div>
                                 <div class="card__info">
-                                    <p class="card__meta">Mobile App</p>
-                                    <h4 class="card__title">How to improve people's mindfulness?</h4>
+                                    <p class="card__meta">WEBSITE</p>
+                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
                                 </div>
-                            </a>
-                        </div>
-                        <div href="#" class="section__cta">
-                            <a href="#" class="btn btn--underline">See all design works<span></span></a>
                             </a>
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
     </main>
     <footer class="site-footer">
